feat: Add About and Contact pages
Introduces new page components for "About Us" and "Contact Us", along with their respective routing and navigation logic. Updates translations to include menu items and SEO meta descriptions for these new pages. Enhances header navigation to accommodate the new pages, including a new dropdown for "About Us" related links.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -7,11 +7,17 @@
     "seo.property.desc": "استشارات عقارية استراتيجية للشراء أو البيع أو التأجير في الشرق الأوسط وأوروبا. حقق أقصى عائد على الاستثمار مع توجيهات الخبراء.",
     "seo.it.title": "حلول تكنولوجيا المعلومات والذكاء الاصطناعي",
     "seo.it.desc": "قم بأتمتة عملك باستخدام التسويق المعتمد على الذكاء الاصطناعي، ومسارات المبيعات، وأنظمة CRM. زد الكفاءة والإيرادات بمقدار 10 أضعاف.",
-    "header.about": "معلومات عنا",
+    "seo.about.title": "معلومات عنا",
+    "seo.about.desc": "تعرف على تاريخ مجموعة بزرگی منذ عام 1988، ومهمتنا ورؤيتنا والتزامنا تجاه الإنسانية.",
+    "seo.contact.title": "اتصل بنا",
+    "seo.contact.desc": "تواصل مع مجموعة بزرگی. مكاتبنا في دبي ودعم عالمي للأخشاب والعقارات وتكنولوجيا المعلومات.",
+    "header.home": "الصفحة الرئيسية",
+    "header.about": "حول",
+    "header.aboutUs": "معلومات عنا",
     "header.products": "مواد البناء",
     "header.property": "العقارات",
     "header.it": "حلول تقنية",
-    "header.history": "التاريخ",
+    "header.history": "تاريخنا",
     "header.humanity": "الإنسانية",
     "header.contact": "اتصل بنا",
     "header.language": "لغة",
