--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -7,11 +7,17 @@
     "seo.property.desc": "Strategic real estate advice for buying, selling, or renting in the Middle East and Europe. Maximize ROI with expert guidance.",
     "seo.it.title": "IT & AI Solutions",
     "seo.it.desc": "Automate your business with AI-driven marketing, sales funnels, and CRM systems. Increase efficiency and revenue by 10x.",
-    "header.about": "About Us",
+    "seo.about.title": "About Us",
+    "seo.about.desc": "Learn about Bozorgi Group's history since 1988, our mission, vision, and commitment to humanity.",
+    "seo.contact.title": "Contact Us",
+    "seo.contact.desc": "Get in touch with Bozorgi Group. Offices in Dubai and global support for Wood, Property, and IT.",
+    "header.home": "Home",
+    "header.about": "About",
+    "header.aboutUs": "About Us",
     "header.products": "Materials",
     "header.property": "Real Estate",
     "header.it": "IT & AI",
-    "header.history": "History",
+    "header.history": "Our History",
     "header.humanity": "Humanity",
     "header.contact": "Contact",
     "header.language": "Language",
