--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -7,7 +7,13 @@
     "seo.property.desc": "Asesoramiento inmobiliario estratégico para comprar, vender o alquilar en Oriente Medio y Europa. Maximice su ROI con orientación experta.",
     "seo.it.title": "Soluciones TI e IA",
     "seo.it.desc": "Automatice su negocio con marketing impulsado por IA, embudos de ventas y CRM. Aumente la eficiencia y los ingresos en 10 veces.",
-    "header.about": "Sobre Nosotros",
+    "seo.about.title": "Sobre Nosotros",
+    "seo.about.desc": "Conozca la historia de Bozorgi Group desde 1988, nuestra misión, visión y compromiso con la humanidad.",
+    "seo.contact.title": "Contáctenos",
+    "seo.contact.desc": "Póngase en contacto con Bozorgi Group. Oficinas en Dubai y soporte global para madera, bienes raíces y TI.",
+    "header.home": "Inicio",
+    "header.about": "Nosotros",
+    "header.aboutUs": "Sobre Nosotros",
     "header.products": "Materiales",
     "header.property": "Inmobiliaria",
     "header.it": "Soluciones IT",
