feat: Add footer quick links and navigation
Introduces a "Quick Links" section in the footer and integrates the `useNavigation` hook to enable seamless scrolling to different sections of the page when links are clicked. This enhances user experience by providing easy access to key content areas.

Also, updates the grid layout for the footer columns to accommodate the new links section and adds the new translation keys for "Quick Links" in English, Spanish, and Arabic.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -145,6 +145,7 @@
     "contact.title": "اتصل بنا",
     "contact.subtitle": "هل أنت مستعد لتحسين سلسلة التوريد الخاصة بك؟ تواصل مع فريقنا العالمي اليوم.",
     "footer.rights": "كل الحقوق محفوظة.",
+    "footer.links": "روابط سريعة",
     "footer.locationTitle": "موقعنا",
     "footer.followUs": "تابعنا",
     "chatbox.title": "دردش معنا",
