--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -145,6 +145,7 @@
     "contact.title": "Contact Us",
     "contact.subtitle": "Ready to optimize your supply chain? Connect with our global team today.",
     "footer.rights": "All rights reserved.",
+    "footer.links": "Quick Links",
     "footer.locationTitle": "Our Location",
     "footer.followUs": "Follow Us",
     "chatbox.title": "Chat with Us",
