--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -145,6 +145,7 @@
     "contact.title": "Contáctenos",
     "contact.subtitle": "¿Listo para optimizar su cadena de suministro? Conecte con nuestro equipo global hoy.",
     "footer.rights": "Todos los derechos reservados.",
+    "footer.links": "Enlaces Rápidos",
     "footer.locationTitle": "Nuestra Ubicación",
     "footer.followUs": "Síganos",
     "chatbox.title": "Chatea con nosotros",
