--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -181,6 +181,15 @@
     "property.who.desc": "Connecting you with trusted partners, agents, and stakeholders you can rely on.",
     "property.strategy.title": "Our Strategic Approach",
     "property.strategy.desc": "We don't just find properties; we analyze markets. Our deep understanding of local regulations in the Middle East and Europe allows us to guide you through complex transactions with ease, ensuring your investment is secure and profitable.",
+    "property.private.title": "Investment in Dubai, Without Hidden Risks",
+    "property.private.subtitle": "We work for those for whom a 3 to 30 million dirham deal is just one line in their portfolio, but that one line should not create trouble.",
+    "property.private.listTitle": "Our Private Client services include:",
+    "property.private.list1": "Direct access to off-market deals and exclusive pre-sales.",
+    "property.private.list2": "Complete legal & tax analysis by a dedicated lawyer and accountant.",
+    "property.private.list3": "Weekly reports on project status until the day of handover.",
+    "property.private.list4": "Option to purchase via a company or trust, ensuring anonymity.",
+    "property.private.stat.value": "84%",
+    "property.private.stat.desc": "Of our clients in the last 12 months have worked with us again or came from referrals. The number speaks for itself.",
     "materials.consulting.title": "Consulting Methodology",
     "materials.consulting.subtitle": "A comprehensive four-step framework to ensure your project's success.",
     "materials.what.title": "What to Choose",
