--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -181,6 +181,15 @@
     "property.who.desc": "Conectándolo con socios, agentes y partes interesadas de confianza en los que puede confiar.",
     "property.strategy.title": "Nuestro Enfoque Estratégico",
     "property.strategy.desc": "No solo encontramos propiedades; analizamos mercados. Nuestra profunda comprensión de las regulaciones locales en Oriente Medio y Europa nos permite guiarlo a través de transacciones complejas con facilidad, asegurando que su inversión sea segura y rentable.",
+    "property.private.title": "Inversión en Dubái, Sin Riesgos Ocultos",
+    "property.private.subtitle": "Trabajamos para aquellos para quienes un acuerdo de 3 a 30 millones de dírhams es solo una línea en su cartera, pero esa línea no debe crear problemas.",
+    "property.private.listTitle": "Nuestros servicios de Cliente Privado incluyen:",
+    "property.private.list1": "Acceso directo a acuerdos fuera del mercado y preventas exclusivas.",
+    "property.private.list2": "Análisis legal y fiscal completo por un abogado y contador dedicados.",
+    "property.private.list3": "Informes semanales sobre el estado del proyecto hasta el día de la entrega.",
+    "property.private.list4": "Opción de compra a través de una empresa o fideicomiso, garantizando el anonimato.",
+    "property.private.stat.value": "84%",
+    "property.private.stat.desc": "De nuestros clientes en los últimos 12 meses han vuelto a trabajar con nosotros o provinieron de referencias. El número habla por sí solo.",
     "materials.consulting.title": "Metodología de Consultoría",
     "materials.consulting.subtitle": "Un marco integral de cuatro pasos para asegurar el éxito de su proyecto.",
     "materials.what.title": "Qué Elegir",
