feat(it): Add IT Lead profile and restructure page
Introduces a new section on the IT page to highlight the Head of IT & AI, Farzin Tahayori, including their professional summary and a link to their personal website. The testimonials and lead form sections have been reordered and re-indexed to accommodate this new content. Additionally, translations for the new content have been added to the locale files.

--- a/public/locales/ar/it.json
+++ b/public/locales/ar/it.json
@@ -58,5 +58,24 @@
     "it.automation.title": "التحول الرقمي",
     "it.automation.desc": "حلول رقمية شاملة بما في ذلك تطوير البرمجيات لتحديث البنية التحتية لأعمالك.",
     "it.marketing.title": "التسويق الرقمي",
-    "it.marketing.desc": "استراتيجيات تسويق قائمة على البيانات مصممة لتوسيع نطاق وصولك وإشراك جمهورك المستهدف بفعالية."
+    "it.marketing.desc": "استراتيجيات تسويق قائمة على البيانات مصممة لتوسيع نطاق وصولك وإشراك جمهورك المستهدف بفعالية.",
+    "it.lead.sectionTitle": "تعرف على رئيس قسم تكنولوجيا المعلومات والذكاء الاصطناعي",
+    "it.lead.name": "فرزين طهيوري",
+    "it.lead.title": "استراتيجي، مُنشئ أنظمة، ومستشار نمو الأعمال",
+    "it.lead.website.url": "https://tahayori.com",
+    "it.lead.website.text": "tahayori.com",
+    "it.lead.summaryTitle": "ملخص احترافي",
+    "it.lead.summary": "شخص لديه أكثر من 20 عامًا من الخبرة في مجالات البرمجة وتصميم النظم والأتمتة الذكية والتسويق الرقمي. لديه سجل حافل بالتعاون مع شركات وعلامات تجارية متنوعة في تصميم الويب، وتنظيم أنظمة المبيعات، والاستشارات الاستراتيجية، وتطوير أتمتة الذكاء الاصطناعي. يجمع بين التفكير التحليلي والإبداع التقني والبصيرة الاقتصادية في تصميم حلول قابلة للتطوير ومربحة.",
+    "it.lead.skillsTitle": "التخصصات والمهارات",
+    "it.lead.skills.group1.title": "البرمجة وتطوير النظم",
+    "it.lead.skills.group2.title": "تصميم الويب وتجربة المستخدم/واجهة المستخدم",
+    "it.lead.skills.group3.title": "الأتمتة والذكاء الاصطناعي",
+    "it.lead.skills.group4.title": "التسويق ونمو المبيعات",
+    "it.lead.skills.group5.title": "إنتاج المحتوى والإعلام",
+    "it.lead.traitsTitle": "السمات الشخصية",
+    "it.lead.trait1": "تفكير نظامي وتحليلي.",
+    "it.lead.trait2": "القدرة على حل المشكلات في المواقف المعقدة.",
+    "it.lead.trait3": "اتخاذ القرارات بناءً على البيانات.",
+    "it.lead.trait4": "تركيز عالٍ على كفاءة النظم وقابليتها للتطوير.",
+    "it.lead.trait5": "مهتم بالفلسفة وعلم السلوك وتصميم الهياكل البشرية والتقنية."
 }
