--- a/public/locales/en/it.json
+++ b/public/locales/en/it.json
@@ -58,5 +58,24 @@
     "it.automation.title": "Digital Transformation",
     "it.automation.desc": "Comprehensive digital solutions including software development to modernize your business infrastructure.",
     "it.marketing.title": "Digital Marketing",
-    "it.marketing.desc": "Data-driven marketing strategies designed to expand your reach and engage your target audience effectively."
+    "it.marketing.desc": "Data-driven marketing strategies designed to expand your reach and engage your target audience effectively.",
+    "it.lead.sectionTitle": "Meet the Head of IT & AI",
+    "it.lead.name": "Farzin Tahayori",
+    "it.lead.title": "Strategist, System Builder & Business Growth Consultant",
+    "it.lead.website.url": "https://tahayori.com",
+    "it.lead.website.text": "tahayori.com",
+    "it.lead.summaryTitle": "Professional Summary",
+    "it.lead.summary": "With over 20 years of experience in programming, system design, intelligent automation, and digital marketing, Farzin has a proven track record of collaborating with diverse brands on web design, sales systemization, strategic consulting, and AI automation. He combines analytical thinking, technical creativity, and economic insight to engineer scalable and profitable solutions.",
+    "it.lead.skillsTitle": "Specialties & Skills",
+    "it.lead.skills.group1.title": "Programming & Systems Development",
+    "it.lead.skills.group2.title": "Web Design & UI/UX",
+    "it.lead.skills.group3.title": "Automation & AI",
+    "it.lead.skills.group4.title": "Marketing & Sales Growth",
+    "it.lead.skills.group5.title": "Content Production & Media",
+    "it.lead.traitsTitle": "Personality Traits",
+    "it.lead.trait1": "Systemic and analytical thinking.",
+    "it.lead.trait2": "Problem-solving ability in complex situations.",
+    "it.lead.trait3": "Data-driven decision-making.",
+    "it.lead.trait4": "High focus on system efficiency and scalability.",
+    "it.lead.trait5": "Interested in philosophy, behavioral science, and the design of human and technical structures."
 }
