--- a/public/locales/es/it.json
+++ b/public/locales/es/it.json
@@ -58,5 +58,24 @@
     "it.automation.title": "Transformación Digital",
     "it.automation.desc": "Soluciones digitales integrales, incluido el desarrollo de software, para modernizar su infraestructura empresarial.",
     "it.marketing.title": "Marketing Digital",
-    "it.marketing.desc": "Estrategias de marketing basadas en datos diseñadas para ampliar su alcance e involucrar a su público objetivo de manera efectiva."
+    "it.marketing.desc": "Estrategias de marketing basadas en datos diseñadas para ampliar su alcance e involucrar a su público objetivo de manera efectiva.",
+    "it.lead.sectionTitle": "Conozca al Director de TI e IA",
+    "it.lead.name": "Farzin Tahayori",
+    "it.lead.title": "Estratega, Creador de Sistemas y Consultor de Crecimiento Empresarial",
+    "it.lead.website.url": "https://tahayori.com",
+    "it.lead.website.text": "tahayori.com",
+    "it.lead.summaryTitle": "Resumen Profesional",
+    "it.lead.summary": "Con más de 20 años de experiencia en programación, diseño de sistemas, automatización inteligente y marketing digital, Farzin tiene un historial probado de colaboración con diversas marcas en diseño web, sistematización de ventas, consultoría estratégica y automatización de IA. Combina el pensamiento analítico, la creatividad técnica y la visión económica para diseñar soluciones escalables y rentables.",
+    "it.lead.skillsTitle": "Especialidades y Habilidades",
+    "it.lead.skills.group1.title": "Programación y Desarrollo de Sistemas",
+    "it.lead.skills.group2.title": "Diseño Web y UI/UX",
+    "it.lead.skills.group3.title": "Automatización e IA",
+    "it.lead.skills.group4.title": "Marketing y Crecimiento de Ventas",
+    "it.lead.skills.group5.title": "Producción de Contenido y Medios",
+    "it.lead.traitsTitle": "Rasgos de Personalidad",
+    "it.lead.trait1": "Pensamiento sistémico y analítico.",
+    "it.lead.trait2": "Capacidad de resolución de problemas en situaciones complejas.",
+    "it.lead.trait3": "Toma de decisiones basada en datos.",
+    "it.lead.trait4": "Alto enfoque en la eficiencia y escalabilidad de los sistemas.",
+    "it.lead.trait5": "Interesado en la filosofía, la ciencia del comportamiento y el diseño de estructuras humanas y técnicas."
 }
